create github pages

--- a/videos.html
+++ b/videos.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/q">responsive website templates</a></section><section class="header3 cid-r0rSiD591R" id="header3-1o">
+<section class="engine"><a href="https://mobirise.me/a">Mobirise alternative</a></section><section class="header3 cid-r0rSiD591R" id="header3-1o">
 
     
 
