--- a/community.html
+++ b/community.html
@@ -46,7 +46,7 @@
                     <a class="nav-link link text-warning display-4" href="https://mobirise.com">
                         </a>
                 </li>
-                <li class="nav-item dropdown"><a class="nav-link link text-warning display-4" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="videos.html">Videos</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page3.html">
+                <li class="nav-item"><a class="nav-link link text-warning display-4" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="videos.html">Videos</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page3.html">
                         
                         Games<br></a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html">Community</a></li></ul>
             
@@ -55,7 +55,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.me/y">free html site templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.me/o">one page web templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
