--- a/games.html
+++ b/games.html
@@ -55,7 +55,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.me/l">free website templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.me/s">free bootstrap theme</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
