create github pages

--- a/games.html
+++ b/games.html
@@ -46,16 +46,16 @@
                     <a class="nav-link link text-warning display-4" href="https://mobirise.com">
                         </a>
                 </li>
-                <li class="nav-item"><a class="nav-link link text-warning display-4" href="http://hdentertainment.co.uk">Home</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="videos.html">Videos</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page3.html">
+                <li class="nav-item"><a class="nav-link link text-warning display-4" href="http://hdentertainment.co.uk">Home</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="http://hdentertainment.co.uk/videos">Videos</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="http://hdentertainment.co.uk/games">
                         
-                        Games<br></a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html">Community</a></li></ul>
+                        Games<br></a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="http://hdentertainment.co.uk/community">Community</a></li></ul>
             
         </div>
     </nav>
 </section>
 
 
-  <section class="engine"><a href="https://mobiri.se/k">develop free website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobiri.se/m">web design templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
