create github pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">how to create a website for free</a></section><section class="cid-r0qfd9F89i mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=zIss90uMcz0" id="header2-m">
+<section class="engine"><a href="https://mobiri.se/a">online web builder</a></section><section class="cid-r0qfd9F89i mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=zIss90uMcz0" id="header2-m">
 
     
 
@@ -166,7 +166,7 @@
                 </div>
             </div>
             <div class="col-md-9">
-                <p class="mbr-text align-right links mbr-fonts-style display-4">&nbsp;<a href="index.html"> HOME</a> &nbsp; &nbsp; <a href="videos.html">VIDEOS</a> &nbsp; &nbsp; <a href="page3.html">GAMES</a> &nbsp; &nbsp; <a href="page4.html">COMMUNITY</a></p>
+                <p class="mbr-text align-right links mbr-fonts-style display-4">&nbsp;<a href="http://hdentertainment.co.uk"> HOME</a> &nbsp; &nbsp; <a href="http://hdentertainment.co.uk/videos">VIDEOS</a> &nbsp; &nbsp; <a href="http://hdentertainment.co.uk/games">GAMES</a> &nbsp; &nbsp; <a href="http://hdentertainment.co.uk/community">COMMUNITY</a></p>
             </div>
         </div>
         <div class="footer-lower">
