--- a/videos.html
+++ b/videos.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/z">best free css templates</a></section><section class="header3 cid-r0rSiD591R" id="header3-1o">
+<section class="engine"><a href="https://mobiri.se/y">html site templates</a></section><section class="header3 cid-r0rSiD591R" id="header3-1o">
 
     
 
@@ -243,7 +243,7 @@
                 </div>
             </div>
             <div class="col-md-9">
-                <p class="mbr-text align-right links mbr-fonts-style display-4">&nbsp;<a href="index.html"> HOME</a> &nbsp; &nbsp; <a href="page2.html">VIDEOS</a> &nbsp; &nbsp; <a href="page3.html">GAMES</a> &nbsp; &nbsp; <a href="page4.html">COMMUNITY</a></p>
+                <p class="mbr-text align-right links mbr-fonts-style display-4">&nbsp;<a href="http://hdentertainment.co.uk"> HOME</a> &nbsp; &nbsp; <a href="http://hdentertainment.co.uk/videos">VIDEOS</a> &nbsp; &nbsp; <a href="http://hdentertainment.co.uk/games">GAMES</a> &nbsp; &nbsp; <a href="http://hdentertainment.co.uk/community">COMMUNITY</a></p>
             </div>
         </div>
         <div class="footer-lower">
