create github pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/hd-studio-122x122.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>home</title>
+  <title>Home</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/a">online web builder</a></section><section class="cid-r0qfd9F89i mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=zIss90uMcz0" id="header2-m">
+<section class="engine"><a href="https://mobiri.se/t">free amp template</a></section><section class="cid-r0qfd9F89i mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=zIss90uMcz0" id="header2-m">
 
     
 
