create github pages

--- a/games.html
+++ b/games.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/s">bootstrap themes</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
+<section class="engine"><a href="https://mobiri.se/k">develop free website</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
 
     
 
@@ -71,7 +71,7 @@
 
             <div class="media-content">
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1"><strong>GAMES</strong></h1>
-                <h3 class="mbr-section-subtitle align-left mbr-white mbr-light pb-3 mbr-fonts-style display-2">HD Dev</h3>
+                <h3 class="mbr-section-subtitle align-left mbr-white mbr-light pb-3 mbr-fonts-style display-2">&nbsp;HD Dev</h3>
                 <div class="mbr-section-text mbr-white pb-3 ">
                     
                 </div>
