create github pages

--- a/games.html
+++ b/games.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">how to create a website</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
+<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
 
     
 
