--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/c">site builder</a></section><section class="cid-r0qfd9F89i mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=zIss90uMcz0" id="header2-m">
+<section class="engine"><a href="https://mobiri.se/g">how to build your own site</a></section><section class="cid-r0qfd9F89i mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=zIss90uMcz0" id="header2-m">
 
     
 
@@ -93,7 +93,7 @@
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-5">We have been creating videos for over 5 years now; directed by Matt, our videos incorporate stop motion and animation and are watched by thousands daily. Our love for videos has seen our channel grow to a fanbase of over 1.2 million subscribers.</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="videos.html">LEARN MORE</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="http://hdentertainment.co.uk/videos">LEARN MORE</a></div>
             </div>
         </div>
     </div>
@@ -118,7 +118,7 @@
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-5">Our small indie game studio has been creating games for over 3 years now; lead by Ben, we aim to deliver exciting and innovative experiences to our players.</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="page3.html">LEARN MORE</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="http://hdentertainment.co.uk/games">LEARN MORE</a></div>
             </div>
         </div>
     </div>
@@ -143,7 +143,7 @@
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-5">Consisting of 15 loyal staff members and over 350,000 members, our community creates a friendly and enjoyable environment for fans to discuss videos and games, and engage in projects through their ideas and creations.</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="page4.html">LEARN MORE</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="http://hdentertainment.co.uk/community">LEARN MORE</a></div>
             </div>
         </div>
     </div>
