create github pages

--- a/Community.html
+++ b/Community.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/p">web templates free download</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
+<section class="engine"><a href="https://mobiri.se/q">responsive web templates</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
 
     
 
@@ -65,8 +65,8 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-figure" style="width: 30%;">
-                <img src="assets/images/hd-studio-800x800.png" alt="Mobirise" title="">
+            <div class="mbr-figure" style="width: 10%;">
+                <img src="assets/images/invisible-84x84.png" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
