create github pages

--- a/Community.html
+++ b/Community.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/q">responsive web templates</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
+<section class="engine"><a href="https://mobiri.se/w">free html5 templates</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
 
     
 
