create github pages

--- a/games.html
+++ b/games.html
@@ -9,7 +9,6 @@
   <link rel="shortcut icon" href="assets/images/hd-studio-122x122.png" type="image/x-icon">
   <meta name="description" content="">
   <title>Games</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -57,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/o">portfolio site templates</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
+<section class="engine"><a href="https://mobiri.se/p">web templates free download</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
 
     
 
@@ -92,7 +91,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-img pb-3">
-                    <span class="mbr-iconfont mbrib-responsive"></span>
+                    <span class="mbr-iconfont mbri-responsive"></span>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-2">20,000,000+</h4>
@@ -103,7 +102,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-img pb-3">
-                    <span class="mbr-iconfont mbrib-growing-chart" style=""></span>
+                    <span class="mbr-iconfont mbri-growing-chart" style=""></span>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-2">
@@ -115,7 +114,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-img pb-3">
-                    <span class="mbr-iconfont mbrib-like"></span>
+                    <span class="mbr-iconfont mbri-like"></span>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-2">
@@ -359,17 +358,17 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/masonry/masonry.pkgd.min.js"></script>
   <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
-  <script src="assets/slidervideo/script.js"></script>
   <script src="assets/gallery/player.min.js"></script>
   <script src="assets/gallery/script.js"></script>
+  <script src="assets/slidervideo/script.js"></script>
   
   
 </body>
