create github pages

--- a/community.html
+++ b/community.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
+<section class="engine"><a href="https://mobiri.se/o">free portfolio web templates</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
 
     
 
@@ -140,7 +140,7 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     About</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">The HD Community consists of over 350,000 members from many different areas of the globe; members come together together to discuss videos and games, and engage in projects through their ideas and creations. Our committed staff team of over 15 people ensures the community maintains a friendly and positive outlook.</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">The HD Community consists of over 350,000 members from many different areas of the globe; members come together together to discuss videos and games and engage in projects through their ideas and creations. Our committed staff team of over 15 people ensures the community maintains a friendly and positive outlook.</h3>
                 
             </div>
         </div>
