create github pages

--- a/games.html
+++ b/games.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/k">develop own website</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
+<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
 
     
 
