create github pages

--- a/community.html
+++ b/community.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
+<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
 
     
 
@@ -105,9 +105,8 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-2">
-                        4000+</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        Discord Members</p>
+                        40,000+</h4>
+                    <p class="mbr-text mbr-fonts-style display-7">Twitter Followers<br></p>
                 </div>
             </div>
 
