--- a/community.html
+++ b/community.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
+<section class="engine"><a href="https://mobiri.se/k">how to develop your own website</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
 
     
 
