--- a/games.html
+++ b/games.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/z">best html templates</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
+<section class="engine"><a href="https://mobiri.se/n">simple website templates</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
 
     
 
