create github pages

--- a/videos.html
+++ b/videos.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/x">css templates</a></section><section class="header3 cid-r0rSiD591R" id="header3-1o">
+<section class="engine"><a href="https://mobiri.se/h">how to create your own web page for free</a></section><section class="header3 cid-r0rSiD591R" id="header3-1o">
 
     
 
@@ -142,7 +142,7 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     About</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">ObliviousHD YouTube was founded in 2013 and originally began with trailers and comedic machinimas. Over the years we have diversified our videos into many styles, including music videos and epic movies. Our love for videos has seen our channel grow to a fanbase of over 1.2 million subscribers.</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">ObliviousHD YouTube was founded in 2013 and originally began with trailers and comedic machinimas. Over the years we have diversified our videos into various styles, including music videos and movies. Our love for videos has seen our channel grow to a fanbase of over 1.2 million subscribers.</h3>
                 
             </div>
         </div>
