--- a/games.html
+++ b/games.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/a">online web builder</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
+<section class="engine"><a href="https://mobiri.se/v">free html templates</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
 
     
 
@@ -241,7 +241,7 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     Background</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Our games are primarily developed in Roblox Studio, but also incorporate software such as Photoshop and Blender. A game can take from a month to seven months to initally develop, on top of additional updates after release.</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Our games are primarily developed in Roblox Studio, but also incorporate software such as Photoshop and Blender. A game can take from a month to seven months to initially develop, on top of additional updates after release.</h3>
                 
             </div>
         </div>
