create github pages

--- a/community.html
+++ b/community.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/r">free bootstrap templates</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
+<section class="engine"><a href="https://mobiri.se/f">easy web maker</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
 
     
 
