--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/l">free web templates</a></section><section class="cid-r0qfd9F89i mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=zIss90uMcz0" id="header2-m">
+<section class="engine"><a href="https://mobiri.se/o">portfolio web templates</a></section><section class="cid-r0qfd9F89i mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=zIss90uMcz0" id="header2-m">
 
     
 
@@ -141,7 +141,7 @@
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><strong>OVER 350,000 MEMBERS</strong></h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
-                    <p class="mbr-text mbr-fonts-style display-5">Consisting of 15 loyal staff members and over 350,000 members, our community creates a friendly and enjoyable environment for fans to discuss videos and games, and engage in projects through their ideas and creations.</p>
+                    <p class="mbr-text mbr-fonts-style display-5">Consisting of over 15 loyal staff members and 350,000 members, our community creates a friendly and enjoyable environment for fans to discuss videos and games, and engage in projects through their ideas and creations.</p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="http://hdentertainment.co.uk/community">LEARN MORE</a></div>
             </div>
