create github pages

--- a/games.html
+++ b/games.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/h">create your own web page for free</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
+<section class="engine"><a href="https://mobiri.se/o">free portfolio website templates</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
 
     
 
@@ -141,7 +141,7 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     About</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">HD Dev consists of a small team of developers from Denmark, the Czech Republic, UK and USA. Our team covers a wide range of skills, from graphic design, to 3D modelling, to programming.&nbsp;</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">HD Dev consists of a small team of developers from the UK, USA, Denmark and Czech Republic. Our team covers a wide range of skills, from graphic design, to 3D modelling, to programming.&nbsp;</h3>
                 
             </div>
         </div>
