--- a/videos.html
+++ b/videos.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/f">simple site maker</a></section><section class="header3 cid-r0rSiD591R" id="header3-1o">
+<section class="engine"><a href="https://mobiri.se/a">online site builder</a></section><section class="header3 cid-r0rSiD591R" id="header3-1o">
 
     
 
@@ -107,7 +107,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-2">
-                        1,200,000+</h4>
+                        1,300,000+</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                         Subscribers</p>
                 </div>
@@ -142,7 +142,7 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     About</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">ObliviousHD YouTube was founded in 2013 and originally began with trailers and comedic machinimas. Over the years we have diversified our videos into various styles, including music videos and movies. Our love for videos has seen our channel grow to a fanbase of over 1.2 million subscribers.</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">ObliviousHD YouTube was founded in 2013 and originally began with trailers &amp; comedic machinimas. Over the years we have diversified our videos into various styles, including music videos and movies. Our love for videos has seen our channel grow to a fanbase of over 1.3 million subscribers.</h3>
                 
             </div>
         </div>
