create github pages

--- a/videos.html
+++ b/videos.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/g">build your own site for free</a></section><section class="header3 cid-r0rSiD591R" id="header3-1o">
+<section class="engine"><a href="https://mobiri.se/d">web maker</a></section><section class="header3 cid-r0rSiD591R" id="header3-1o">
 
     
 
