create github pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/t">free amp template</a></section><section class="cid-r0qfd9F89i mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=zIss90uMcz0" id="header2-m">
+<section class="engine"><a href="https://mobiri.se/d">web maker</a></section><section class="cid-r0qfd9F89i mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=zIss90uMcz0" id="header2-m">
 
     
 
@@ -166,7 +166,7 @@
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><strong>OUR STORE</strong></h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
-                    <p class="mbr-text mbr-fonts-style display-5">Following requests from subscribers, we have setup our own store featuring plushie toys, jumpers and other merchandise that fans can purchase.</p>
+                    <p class="mbr-text mbr-fonts-style display-5">Following requests from subscribers, we have setup our own store featuring plushie toys, jumpers and other merchandise that fans can purchase. TEST</p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="http://hdentertainment.co.uk/games">VISIT</a></div>
             </div>
