create github pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/y">free html website templates</a></section><section class="cid-r0qfd9F89i mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=zIss90uMcz0" id="header2-m">
+<section class="engine"><a href="https://mobiri.se/r">bootstrap template</a></section><section class="cid-r0qfd9F89i mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=zIss90uMcz0" id="header2-m">
 
     
 
@@ -168,7 +168,7 @@
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-5">Following requests from subscribers, we have setup our own store featuring plushie toys, jumpers and other merchandise that fans can purchase.</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="http://hdentertainment.co.uk/games">VISIT</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://hellojuniper.com/oblivioushd/store/" target="_blank">VISIT</a></div>
             </div>
         </div>
     </div>
