create github pages

--- a/games.html
+++ b/games.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/t">free amp template</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
+<section class="engine"><a href="https://mobiri.se/n">free simple site templates</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
 
     
 
@@ -157,7 +157,7 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     Games</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Our latest games include Guest World, ObliviousHD Roleplay World, Dwarf Simulator and HD Minigames. You can view all our projects <a href="https://devforum.roblox.com/t/hd-dev-projects/115713" target="_blank">here</a>.</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Our latest games include Guest World and ObliviousHD Roleplay World. You can view all our projects <a href="https://devforum.roblox.com/t/hd-dev-projects/115713" target="_blank">here</a>.</h3>
                 
             </div>
         </div>
