create github pages

--- a/community.html
+++ b/community.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/z">best website templates</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
+<section class="engine"><a href="https://mobiri.se/m">free website design templates</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
 
     
 
@@ -247,7 +247,7 @@
                     <p class="mbr-text mbr-fonts-style display-5">
                         Discord is a free voice and text chat app that enables easy communication between users. The HD Community Discord Server was established in 2017 and has grown to a community of over 4000 members. Our awesome staff ensure members are kept up to date with the latest news and events, whilst maintaining a safe and friendly environment for everyone to talk in.&nbsp;</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="http://discord.gg/4kSS2tD" target="_blank">JOIN TODAY</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://discordapp.com/invite/hJBGFa5" target="_blank">JOIN TODAY</a></div>
             </div>
         </div>
     </div>
