--- a/games.html
+++ b/games.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/y">free html web templates</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
+<section class="engine"><a href="https://mobiri.se/g">build your own site</a></section><section class="header3 cid-r0w4oxVWqF" id="header3-2l">
 
     
 
