--- a/community.html
+++ b/community.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/p">site templates free download</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
+<section class="engine"><a href="https://mobiri.se/e">make your own site</a></section><section class="header3 cid-r0x9gMg77V" id="header3-36">
 
     
 
